appId: com.example.handyhouse
tags:
  - functional
---
- launchApp:
    stopApp: false
- extendedWaitUntil:
    visible: "Shop"
    timeout: 60000
- tapOn: "Shop"
- tapOn: "Search products"
- eraseText: 50
- inputText: "drill"
- hideKeyboard
- scroll
- scroll
- scroll
- tapOn: "Add to cart"
- tapOn: "Cart.*"
- assertVisible: "Total.*"